# STB

./: .env.sample  .gitignore  README.md  app_logger.py  docker-compose.yml  factory.py  main.py  pyproject.toml
agent/: interfaces.py  pydantic_agent.py
core/: __init__.py  settings.py
models/: agent.py
repositories/: interfaces.py  pydantic_ai_repository.py
routers/: media_handlers.py  menu_handlers.py  text_router.py
services/: chat_service.py  interfaces.py
